--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,5 @@
 {% load static %}
-{% url 'home' as home_url %}
-{% url 'account_login' as login_url %}
-{% url 'account_signup' as signup_url %}
-{% url 'account_logout' as logout_url %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,7 +15,10 @@
 </head>
 <body>
     
-
+<main class="container">
+    {% block content %}
+    {% endblock %}
+</main>
 
 
     {% block onload_js %}
