--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,36 +1,10 @@
+
 {% extends 'base.html' %}
+
+{% load static %}
 
 {% block content %}
 
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="fa-solid fa-book"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Add a Book</a>
-          </li>
-          
-        </ul>
-      </div>
-    </div>
-  </nav>
-<div class="hero-image">
-    <div class="hero-text">
-      <h1 class="display-4"><strong>The Book Booth</strong></h1>
-      <p class="lead"><strong>A Book Community for the lover of books</strong></p>
-      <a href="{% url 'account_signup' %}"><button>Sign up and get reading!</button></a>
-    </div>
-  </div>
-  
+
 {% endblock %}
