--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,8 @@
 {% load static %}
+{% url 'home' as home_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 
 
 <!DOCTYPE html>
@@ -10,20 +14,25 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% endblock %}
-    <title>Document</title>
+    <title>The Book Booth</title>
 </head>
 <body>
-    
-<main class="container">
-    {% block content %}
-    {% endblock %}
-</main>
+    {% include 'includes/header.html' %}
 
+    <main>
+        {% block content %}
+        
+        {% endblock %}
+    </main>
+
+
+    {% include 'includes/footer.html' %}
 
     {% block onload_js %}
     <script src="https://kit.fontawesome.com/89fa774aea.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
     {% endblock %}
 </body>
 </html>
