--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,8 +1,10 @@
-{% load static %}
-<footer class="bg-dark text-center text-white">
+{% load static %}#
+
+<div class="container p-3 pb-0">
+<footer class="text-center text-white">
 
   <!-- Grid container -->
-  <div class="container p-4 pb-0">
+  
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
@@ -37,7 +39,6 @@
     </section>
     <!-- Section: Social media -->
   </div>
-  <!-- Grid container -->
 
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: slategray;">
