--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,42 +1,50 @@
 {% load static %}
 
-{% with request.resolver_match_url_name as url_name %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'home' %}">Home</a>
-            </li>
-            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'home' %}">About Us</a>
-            </li>
-            {% if perms.lessons.add_book %}
-                <li class="nav-item">
-                    <a class="nav-link {% if url_name == 'add_lesson' %}active{% endif %}" href="{% url 'add_lesson' %}">Add lesson</a>
-                </li>
-            {% endif %}
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'account_logout' %}">Logout</a>
-            </li> 
-            <li class="nav-item">
-                <a class="nav-link {% if request.path == modules_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'modules' %}">Add a Book</a>
-            </li>        
-            {% else %} <li class="nav-item">
-                <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'account_signup' %}">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {% if request.path == login_url %}active" aria-current="page{% endif %}"
-                    href="{% url 'account_login' %}">Login</a>
-            </li>
+<header>
+  {% with request.resolver_match.url_name as url_name %}
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+        <!-- Logo -->
+          <a class="navbar-brand" href="#">BOoks</a>
 
-            </li>
-             {% endif %}
-        </ul> <span class="navbar-text text-muted"><strong> Join Our Reading Community</strong> </span>
-    </div>
-</nav>
-{% endwith %}
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Navigation items -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2">
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'book' %}active{% endif %}" href="{% url 'book' %}">Recipes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">New</a>
+              </li>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
+              </li>
+              {% endif %}
+            </ul>
+            <!-- Form for search bar -->
+            <form class="d-flex" role="search" method="GET" action="{% url 'books' %}">
+                <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Search</button>
+              </form>
+          </div>
+        </div>
+      </nav>
+  {% endwith %}
+</header>
