--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
         <!-- Logo -->
-          <a class="navbar-brand" href="#">BOoks</a>
+          <a class="navbar-brand" href="#"> The Book Booth <i class="fa-solid fa-book"></i></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -16,16 +16,12 @@
               <li class="nav-item">
                 <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
+              
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'book' %}active{% endif %}" href="{% url 'book' %}">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">New</a>
+                <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">Add a Book</a>
               </li>
               {% if request.user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
-              </li>
+               
               <li class="nav-item">
                 <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
               </li>
