style the footer and implement styling.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,12 +22,18 @@ main {
 /* Footer */
 footer {
     flex-shrink: 0;
-    background-color: pink;
+    background-color: #660000;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
+}
+
+header {
+    background-color: #660000;
+    color: white;
 }
 
 .social-icon {
