--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,17 +1,12 @@
 {% load static %}#
 
-<div class="container p-3 pb-0">
+
 <footer class="text-center text-white">
 
-  <!-- Grid container -->
   
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
-
+  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+  ><i class="fab fa-facebook-f"></i
+></a>
       <!-- Twitter -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-twitter"></i
@@ -41,9 +36,8 @@
   </div>
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: slategray;">
-    © 2023 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-3">
+    <a class="text-white" href="https://mdbootstrap.com/">thebookbooth.com</a>
   </div>
   <!-- Copyright -->
 </footer>
