--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<header>
+<header class="text-white" >
   {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
         <!-- Logo -->
           <a class="navbar-brand" href="#"> The Book Booth <i class="fa-solid fa-book"></i></a>
@@ -14,30 +14,33 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2">
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+                <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'books' %}active{% endif %}" aria-current="page" href="{% url 'books' %}">BOOKS</a>
               </li>
               
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">Add a Book</a>
+                <a class="nav-link {% if url_name == 'add_book' %}active{% endif %}" href="{% url 'add_book' %}">ADD A BOOK</a>
               </li>
               {% if request.user.is_authenticated %}
                
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
+                <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">LOGOUT</a>
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
+                <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">REGISTER</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
+                <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">LOGIN</a>
               </li>
               {% endif %}
             </ul>
             <!-- Form for search bar -->
             <form class="d-flex" role="search" method="GET" action="{% url 'books' %}">
                 <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary" type="submit">Search</button>
+                <button class="btn btn-outline-warning" type="submit">Search</button>
               </form>
           </div>
         </div>
