--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,12 @@
 
 {% block content %}
 
-
+{% if "placeholder" in post.featured_image.url %}
+  <img class="card-img-top" src="{% static 'images/default.jpg' %}"
+    alt="placeholder image">
+  {% else %}
+  <img class="card-img-top" src=" {{ post.featured_image.url }}"
+    alt="{{ post.title }}">
+  {% endif %}
 
 {% endblock %}
