--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,16 +1,15 @@
 
 {% extends 'base.html' %}
 
-{% load static %}
 
 {% block content %}
+<div class="hero-image">
 
-{% if "placeholder" in post.featured_image.url %}
-  <img class="card-img-top" src="{% static 'images/default.jpg' %}"
-    alt="placeholder image">
-  {% else %}
-  <img class="card-img-top" src=" {{ post.featured_image.url }}"
-    alt="{{ post.title }}">
-  {% endif %}
+  <div class="hero-text">
+    <h1 class="display-4"><strong>The Book Booth</strong></h1>
+    <p class="lead"><strong>Join our reading community</strong></p>
+    <a href="{% url 'account_signup' %}"><button>Sign up and get reading!</button></a>
+  </div>
+</div>
 
 {% endblock %}
