--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,9 +6,9 @@
 <div class="hero-image">
 
   <div class="hero-text">
-    <h1 class="display-4"><strong>The Book Booth</strong></h1>
-    <p class="lead"><strong>Join our reading community</strong></p>
-    <a href="{% url 'account_signup' %}"><button>Sign up and get reading!</button></a>
+    <h1 class="display-5 mt-3"><strong>The Book Booth</strong></h1>
+    <p class="lead"><strong>JOIN OUR READING COMMUNITY</strong></p>
+    <a href="{% url 'account_signup' %}"><button class="btn btn-outline-success">Sign up</button></a>
   </div>
 </div>
 
