--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -40,7 +40,7 @@
             <!-- Form for search bar -->
             <form class="d-flex" role="search" method="GET" action="{% url 'books' %}">
                 <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-warning" type="submit">Search</button>
+                <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
           </div>
         </div>
