--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -9,7 +9,7 @@
         {{ form.media }} 
         {{ form| crispy }} 
         <div class="text-center"> 
-            <button type="submit" class="btn btn-warning mt-2">Submit</button> 
+            <button type="submit" class="btn btn-lg btn-outline-success mt-2">Submit</button> 
         </div> 
     </form> 
 </div> 
