--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,32 +1,28 @@
-{% extends "account/base_entrance.html" %}
-{% load allauth i18n socialaccount %}
-{% block head_title %}
-    {% trans "Signup" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load i18n %}
+{% block title %}{% trans "Signup" %}{% endblock title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Up" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-    </p>
-    {% url 'account_signup' as action_url %}
-    {% element form form=form method="post" action=action_url tags="entrance,signup" %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
-            {% endelement %}
-            {% if redirect_field_value %}
-                <input type="hidden"
-                       name="{{ redirect_field_name }}"
-                       value="{{ redirect_field_value }}" />
-            {% endif %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button tags="prominent,signup" type="submit" %}
-                {% trans "Sign Up" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
-{% endblock content %}
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <h1>{% trans "Signup" %}</h1>
+      <p> {% blocktrans %}Welcome to Bark to Basics. Already have an account? Then please <a href="{{ login_url }}">sign
+          in</a>.{% endblocktrans %} </p>
+
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 mt-3 offset-md-2">
+    <form class="form p-2" action="{% url 'account_signup' %}"> {% csrf_token %} {{ form | crispy }}
+      {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}"
+        value="{{ redirect_field_value }}"> {% endif %} 
+        <div class="text-center">
+        <button type="submit" class="btn btn-outline-success mb-2">Sign
+        Up </button> </form>
+
+    </div>
+  </div>
+</div>
+</div>
+{% endblock %}
