--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -14,8 +14,10 @@
             <img src="{{book.image.url}}" class="card-img-top" alt="{{book.image_alt}}">
             <div class="card-body">
               <h2 class="card-title">{{book.title}}</h2>
+              <h3 class="card-title">{{book.author}}</h3>
+
               <p class="card-text">{{book.summary}}</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="" class="btn btn-success">Read More</a>
             </div>
           </div>
     </a>
