--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,9 @@
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
         <!-- Logo -->
-          <a class="navbar-brand" href="#"> The Book Booth <i class="fa-solid fa-book"></i></a>
+          <a class="navbar-brand" href=""> The Book Booth <i class="fa-solid fa-book"></i></a>
+          <img src="/workspace/thebookbooth1/static/images/logo.jpg" alt="" width="30" height="24">
+ </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
