--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,14 +22,19 @@ main {
     background-size: contain;
     position: relative;
     width: 100%;
-
-
 }
 
 /* Hero text*/ 
 
 .hero-text {
     text-align: center;
+}
+
+/* lead text */
+
+.hero-text .lead {
+    font-family: 'GoudyBookletter1911';
+    font-size: 2.5em;
 }
 /*Navbar & logo */ 
 .navbar {
@@ -108,7 +113,7 @@ ul .nav-link {
 /* Footer */
 footer {
     flex-shrink: 0;
-    background-color: #D2E8C9;
+    background-color: #809977;
     display: flex;
     flex-direction: row;
     justify-content: center;
