Add path to include home.urls.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="hero-image">
 
   <div class="hero-text">
-    <p class="lead"><strong>Join Our Reading Community ... </strong></p>
+    <p class="lead"><strong>Join Our Reading Community  </strong></p>
     <a href="{% url 'account_signup' %}"><button class="btn btn-outline-success btn-lg">Sign up</button></a>
   </div>
 </div>
