--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,19 +66,75 @@ main {
 ul .nav-link {
     font-weight: bold;
 }
-/* Card */ 
+/* Cards */ 
+
+.cards__container {
+    width: 90%;
+    background-color: white;
+    border-radius: 10px;
+    margin: 20px auto 40px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    display: flex;
+    box-shadow: 0px 0px 3px 0px grey;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+  }
+  
 .card {
-    height: 90%;
-    margin-top: 1rem;
+    position: relative;
+    width: 200px;
+    height: 270px;
+    margin: 15px;
+    background-color: transparent;
+    border-radius: 5px;
 }
 
-.card img {
-    background: white;
-    border: 1px solid grey;
-    color: rgba(250, 250, 250, 0.8);
-    margin-bottom: 2rem;
+
+
+.name { 
+    font-size: 1.6rem;
+    font-weight: bold;
+    position: absolute;
+    top: 15px;
+    left: 350px;
+
 }
 
+.author {
+    font-size: 1.4rem;
+    font-style: italic;
+    position: absolute;
+    top: 50px;
+    left: 350px;
+}
+
+.summary {
+    font-size: 1rem;
+      display: inline-block;
+      position: absolute;
+      width: 60%;
+      top: 150px;
+      left: 350px;
+}
+
+.genre {
+    font-size: 1rem;
+    display: inline-block;
+    position: absolute;
+    width: 60%;
+    top: 150px;
+    left: 350px;
+}
+
+.book_img {
+    width: 300px;
+    height: 400px;
+    margin: 0px 15px;
+    border-radius: 10px;
+}
 .books{
     text-decoration: none;
     color: black;
@@ -99,22 +155,36 @@ ul .nav-link {
     flex-direction: column;
 }
 
-.book-detail{
-    width: 100%;
 
+.edit_btn{
+    left :90%;
+    padding: 10px 15px;
+    text-align: center
+  }
+
+.delete-btn, .edit_btn {
+    background-color: #FFB830;
+    color: white;
+    text-decoration: none;
+    display: inline;
+    border-radius: 10px;
+    padding: 10px 20px;
+    outline: none;
+    border: none;
 }
 
-.book-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.book-pic {
-    width: 100%;
-    height: auto;
-}
-
+.container {
+    width: 90%;
+    height: 400px;
+    background-color: white;
+    border-radius: 10px;
+    margin: 0px auto;
+    margin-top: 25px;
+    padding-bottom:20px ;
+    padding-top:20px ;
+    box-shadow: 0px 0px 3px 0px grey;
+    position: relative;
+  }
 
 
 /* Footer */
@@ -156,10 +226,6 @@ header {
         border: 1px solid var(--black);
     }
 
-    .book-img {
-        width: 40%;
-        margin: 0 auto;
-    }
 
     .book-detail {
         width: 60%;
