--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 {% block title %}{% trans "Signup" %}{% endblock title %}
 {% block content %}
-<div class="container text-center">
+<div class="sign-up-container text-center">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h1>{% trans "Signup" %}</h1>
-      <p> {% blocktrans %}Welcome to Bark to Basics. Already have an account? Then please <a href="{{ login_url }}">sign
+      <p> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">sign
           in</a>.{% endblocktrans %} </p>
 
     </div>
