--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -16,7 +16,7 @@
       <div class="card">
             <img src="{{book.image.url}}" class="card-img" alt="{{book.image_alt}}">
             <div class="card-body">
-              <p class="card-title">{{book.title}}</p>
+              <p class="card-title"><strong>{{book.title}}</strong></p>
               <p class="card-title">{{book.author}}</p>
 
               <a href="{% url 'book_detail' book.id %}" class="btn btn-success">Read More</a>
