--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,10 +8,11 @@
 
 {% block content %}
 
-<div class="container text-center">
+<div class="sign-in-container text-center">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
+            
             <p>
                 {% blocktrans %}
                 Welcome back to The Book Booth. To view our available books or to add a book, please log in.
