--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -2,7 +2,7 @@
 {% block title %}Add a Book {% endblock %}
 
 {% block content %}
-<div class="container"> 
+<div class="add-container"> 
     <form method="post" enctype="multipart/form-data" class="p-2 form"> 
         <h1 class="text-center">Add Book</h1> 
         {% csrf_token %}
