Remove container from sign up page center content.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -199,7 +199,7 @@ ul .nav-link {
     height: 70vh;
     margin: 60px auto;
     border-radius: 10px;
-    background-color: white;
+    background-color: #809977;
     position: relative;
 }
 
