--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,28 +1,27 @@
 {% extends "base.html" %}
+
 {% load i18n %}
+
+{% load crispy_forms_tags %}
+
 {% block title %}{% trans "Signup" %}{% endblock title %}
+
 {% block content %}
-<div class="sign-up-container text-center">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
-      <h1>{% trans "Signup" %}</h1>
-      <p> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">sign
+
+      <h1 class="text-center">{% trans "Signup" %}</h1>
+
+      <p class="text-center"> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">sign
           in</a>.{% endblocktrans %} </p>
 
-    </div>
-  </div>
-</div>
 <div class="row">
   <div class="col-md-8 mt-3 offset-md-2">
     <form class="form p-2" action="{% url 'account_signup' %}"> {% csrf_token %} {{ form | crispy }}
       {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}"
         value="{{ redirect_field_value }}"> {% endif %} 
         <div class="text-center">
-        <button type="submit" class="btn btn-outline-success mb-2">Sign
+        <button type="submit" class="btn btn-success mb-2">Sign
         Up </button> </form>
 
     </div>
   </div>
-</div>
-</div>
-{% endblock %}
+{% endblock content %}
