--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,8 +10,8 @@
 
       <h1 class="text-center">{% trans "Signup" %}</h1>
 
-      <p class="text-center"> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">sign
-          in</a>.{% endblocktrans %} </p>
+      <p class="text-center"> {% blocktrans %}Welcome to The Book Booth. Already have an account? Then please <a href="{{ login_url }}">Sign
+          In</a>.{% endblocktrans %} </p>
 
 <div class="row">
   <div class="col-md-8 mt-3 offset-md-2">
