--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -19,7 +19,7 @@
         <p class="card-title"><strong>{{book.title}}</strong></p>
         <p class="card-title">{{book.author}}</p>
 
-        <a href="{% url 'book_detail' book.id %}" class="btn btn-success">Read More</a>
+        <a href="{% url 'book_detail' book.id %}" class="btn btn-sm btn-success">Read More</a>
       </div>
     </div>
 
